fixed issue with product-card height -- overflow cut off card content when window height was reduced. changed body height to min-height

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
   align-items: center;
 
   padding: 3rem 1rem 1rem 1rem;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 a {
